--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: portfolio
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -34,15 +34,15 @@ dependencies:
   url_launcher: ^6.3.2
   responsive_framework: ^1.5.1
   google_fonts: ^6.3.2
-  flutter_markdown: ^0.7.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  
+
   intl: ^0.20.2
   shared_preferences: ^2.5.3
   provider: ^6.1.5
+  flutter_markdown_plus: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -60,20 +60,18 @@ dev_dependencies:
 #   ios: true
 #   remove_alpha_ios: true
 #   image_path: "assets/images/launcher.png"
-#   min_sdk_android: 21 
+#   min_sdk_android: 21
 
 # flutter_native_splash:
 #   color: "#B3142E"
 #   android_12:
 #     color: "#B3142E"
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -81,8 +79,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - assets/images/
-  #   - assets/resume/resume.pdf
+    # - assets/images/
+    # - assets/resume/resume.pdf
+    # - assets/content/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -109,7 +108,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-
 
   # assets:
   #   - .env.development
