--- a/l10n.yaml
+++ b/l10n.yaml
@@ -3,3 +3,4 @@ template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
 output-class: AppLocalizations
 untranslated-messages-file: l10n_untranslated.json
+# flutter gen-l10n
