--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -157,7 +157,7 @@ flutter:
     #   - .env.development
     #   - .env.staging
     #   - .env.production
-    - .env
+    # - .env
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
