--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,13 @@ dependencies:
     sdk: flutter
 
   # --- Routing / Navigation ---
-  go_router: ^16.3.0 # modern router w/ deep links + wev
+  go_router: ^17.0.0 # modern router w/ deep links + wev
 
   # --- UI / UX ---
   google_fonts: ^6.3.2 # typography from fonts.google.com (official)
   responsive_framework: ^1.5.1 # responsive breakpoints and layout helpers
   url_launcher: ^6.3.2 # open mailto:, https, etc. across platforms
-  animations: ^2.1.0 # subtle page/element transitions
+  animations: ^2.1.1 # subtle page/element transitions
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,11 +53,11 @@ dependencies:
   # --- Markdown content pipeline ---
   flutter_markdown_plus: ^1.0.5 # maintained fork of flutter_markdown
   yaml: ^3.1.3 # parse front-matter
-  http: ^1.5.0 # web fetch (if you ever host raw md separately)
+  http: ^1.6.0 # web fetch (if you ever host raw md separately)
   path: ^1.9.1
   collection: ^1.19.1
   intl: ^0.20.2 # dates & formatting
-  flutter_svg: ^2.2.1 # render SVG logos, icons in markdown
+  flutter_svg: ^2.2.2 # render SVG logos, icons in markdown
 
   # --- Local storage / prefs ---
   shared_preferences: ^2.5.3 # use new Async/WithCache APIs per package guidance
@@ -65,9 +65,7 @@ dependencies:
   # --- Client-side encryption for private markdown ---
   cryptography: ^2.7.0 # AES-GCM, HKDF, etc.
 
-  flutter_dotenv: ^6.0.0
-
-  # NEW: needed to use url strategy on web
+  # needed to use url strategy on web
   flutter_web_plugins:
     sdk: flutter
 
@@ -82,8 +80,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
 
-  build_runner: ^2.4.10 # if you generate any code (e.g., JSON models)
-  json_serializable: ^6.9.2 # for any generated models used by tools/CI
+  build_runner: ^2.10.3 # if you generate any code (e.g., JSON models)
+  json_serializable: ^6.11.1 # for any generated models used by tools/CI
 
 # flutter_launcher_icons:
 #   android: "launcher_icon"
@@ -157,7 +155,6 @@ flutter:
     #   - .env.development
     #   - .env.staging
     # - .env.production
-    - .env
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
@@ -188,89 +185,35 @@ flutter:
   fonts:
     - family: NotoSans
       fonts:
-        - asset: assets/fonts/NotoSans/NotoSans-Thin.ttf
-          weight: 100
-        - asset: assets/fonts/NotoSans/NotoSans-ExtraLight.ttf
-          weight: 200
-        - asset: assets/fonts/NotoSans/NotoSans-Light.ttf
-          weight: 300
         - asset: assets/fonts/NotoSans/NotoSans-Regular.ttf
           weight: 400
         - asset: assets/fonts/NotoSans/NotoSans-Medium.ttf
           weight: 500
-        - asset: assets/fonts/NotoSans/NotoSans-SemiBold.ttf
-          weight: 600
         - asset: assets/fonts/NotoSans/NotoSans-Bold.ttf
           weight: 700
-        - asset: assets/fonts/NotoSans/NotoSans-ExtraBold.ttf
-          weight: 800
-        - asset: assets/fonts/NotoSans/NotoSans-Black.ttf
-          weight: 900
         - asset: assets/fonts/NotoSans/NotoSans-Italic.ttf
           style: italic
-        - asset: assets/fonts/NotoSans/NotoSans-LightItalic.ttf
-          weight: 300
-          style: italic
-        - asset: assets/fonts/NotoSans/NotoSans-MediumItalic.ttf
-          weight: 500
-          style: italic
-        - asset: assets/fonts/NotoSans/NotoSans-SemiBoldItalic.ttf
-          weight: 600
-          style: italic
-        - asset: assets/fonts/NotoSans/NotoSans-BoldItalic.ttf
-          weight: 700
-          style: italic
-        - asset: assets/fonts/NotoSans/NotoSans-ExtraBoldItalic.ttf
-          weight: 800
-          style: italic
-        - asset: assets/fonts/NotoSans/NotoSans-BlackItalic.ttf
-          weight: 900
-          style: italic
+
 
     - family: NotoSansSC   # Simplified Chinese (Han)
       fonts:
-        - asset: assets/fonts/NotoSansSC/NotoSansSC-Thin.ttf
-          weight: 100
-        - asset: assets/fonts/NotoSansSC/NotoSansSC-ExtraLight.ttf
-          weight: 200
-        - asset: assets/fonts/NotoSansSC/NotoSansSC-Light.ttf
-          weight: 300
         - asset: assets/fonts/NotoSansSC/NotoSansSC-Regular.ttf
           weight: 400
         - asset: assets/fonts/NotoSansSC/NotoSansSC-Medium.ttf
           weight: 500
-        - asset: assets/fonts/NotoSansSC/NotoSansSC-SemiBold.ttf
-          weight: 600
         - asset: assets/fonts/NotoSansSC/NotoSansSC-Bold.ttf
           weight: 700
-        - asset: assets/fonts/NotoSansSC/NotoSansSC-ExtraBold.ttf
-          weight: 800
-        - asset: assets/fonts/NotoSansSC/NotoSansSC-Black.ttf
-          weight: 900
 
     - family: NotoSerifSC  # for headings / classical tone (bazi/taoism)
       fonts:
         - asset: assets/fonts/NotoSerifSC/NotoSerifSC-Regular.ttf
           weight: 400
-        - asset: assets/fonts/NotoSerifSC/NotoSerifSC-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/NotoSerifSC/NotoSerifSC-SemiBold.ttf
-          weight: 600
         - asset: assets/fonts/NotoSerifSC/NotoSerifSC-Bold.ttf
           weight: 700
-        - asset: assets/fonts/NotoSerifSC/NotoSerifSC-ExtraBold.ttf
-          weight: 800
-        - asset: assets/fonts/NotoSerifSC/NotoSerifSC-Black.ttf
-          weight: 900
-        - asset: assets/fonts/NotoSerifSC/NotoSerifSC-Light.ttf
-          weight: 300
-        - asset: assets/fonts/NotoSerifSC/NotoSerifSC-ExtraLight.ttf
-          weight: 200
 
     - family: NotoSansSymbols2
       fonts:
         - asset: assets/fonts/NotoSansSymbols2/NotoSansSymbols2-Regular.ttf
-          weight: 400
 
     - family: NotoColorEmoji   # emoji fallback
       fonts:
@@ -278,43 +221,7 @@ flutter:
 
     - family: JetBrainsMono     # code blocks / monospace
       fonts:
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-Thin.ttf
-          weight: 100
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-ExtraLight.ttf
-          weight: 200
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-Light.ttf
-          weight: 300
         - asset: assets/fonts/JetBrainsMono/JetBrainsMono-Regular.ttf
           weight: 400
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-SemiBold.ttf
-          weight: 600
         - asset: assets/fonts/JetBrainsMono/JetBrainsMono-Bold.ttf
           weight: 700
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-ExtraBold.ttf
-          weight: 800
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-ThinItalic.ttf
-          weight: 100
-          style: italic
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-ExtraLightItalic.ttf
-          weight: 200
-          style: italic
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-LightItalic.ttf
-          weight: 300
-          style: italic
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-Italic.ttf
-          weight: 400
-          style: italic
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-MediumItalic.ttf
-          weight: 500
-          style: italic
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-SemiBoldItalic.ttf
-          weight: 600
-          style: italic
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-BoldItalic.ttf
-          weight: 700
-          style: italic
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-ExtraBoldItalic.ttf
-          weight: 800
-          style: italic
