--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -182,46 +182,46 @@ flutter:
     # For details regarding fonts from package dependencies,
     # see https://flutter.dev/to/font-from-package
 
-  fonts:
-    - family: NotoSans
-      fonts:
-        - asset: assets/fonts/NotoSans/NotoSans-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/NotoSans/NotoSans-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/NotoSans/NotoSans-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/NotoSans/NotoSans-Italic.ttf
-          style: italic
+  # fonts:
+  #   - family: NotoSans
+  #     fonts:
+  #       - asset: assets/fonts/NotoSans/NotoSans-Regular.ttf
+  #         weight: 400
+  #       - asset: assets/fonts/NotoSans/NotoSans-Medium.ttf
+  #         weight: 500
+  #       - asset: assets/fonts/NotoSans/NotoSans-Bold.ttf
+  #         weight: 700
+  #       - asset: assets/fonts/NotoSans/NotoSans-Italic.ttf
+  #         style: italic
 
 
-    - family: NotoSansSC   # Simplified Chinese (Han)
-      fonts:
-        - asset: assets/fonts/NotoSansSC/NotoSansSC-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/NotoSansSC/NotoSansSC-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/NotoSansSC/NotoSansSC-Bold.ttf
-          weight: 700
+  #   - family: NotoSansSC   # Simplified Chinese (Han)
+  #     fonts:
+  #       - asset: assets/fonts/NotoSansSC/NotoSansSC-Regular.ttf
+  #         weight: 400
+  #       - asset: assets/fonts/NotoSansSC/NotoSansSC-Medium.ttf
+  #         weight: 500
+  #       - asset: assets/fonts/NotoSansSC/NotoSansSC-Bold.ttf
+  #         weight: 700
 
-    - family: NotoSerifSC  # for headings / classical tone (bazi/taoism)
-      fonts:
-        - asset: assets/fonts/NotoSerifSC/NotoSerifSC-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/NotoSerifSC/NotoSerifSC-Bold.ttf
-          weight: 700
+  #   - family: NotoSerifSC  # for headings / classical tone (bazi/taoism)
+  #     fonts:
+  #       - asset: assets/fonts/NotoSerifSC/NotoSerifSC-Regular.ttf
+  #         weight: 400
+  #       - asset: assets/fonts/NotoSerifSC/NotoSerifSC-Bold.ttf
+  #         weight: 700
 
-    - family: NotoSansSymbols2
-      fonts:
-        - asset: assets/fonts/NotoSansSymbols2/NotoSansSymbols2-Regular.ttf
+  #   - family: NotoSansSymbols2
+  #     fonts:
+  #       - asset: assets/fonts/NotoSansSymbols2/NotoSansSymbols2-Regular.ttf
 
-    - family: NotoColorEmoji   # emoji fallback
-      fonts:
-        - asset: assets/fonts/NotoColorEmoji/NotoColorEmoji-Regular.ttf
+  #   - family: NotoColorEmoji   # emoji fallback
+  #     fonts:
+  #       - asset: assets/fonts/NotoColorEmoji/NotoColorEmoji-Regular.ttf
 
-    - family: JetBrainsMono     # code blocks / monospace
-      fonts:
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/JetBrainsMono/JetBrainsMono-Bold.ttf
-          weight: 700
+  #   - family: JetBrainsMono     # code blocks / monospace
+  #     fonts:
+  #       - asset: assets/fonts/JetBrainsMono/JetBrainsMono-Regular.ttf
+  #         weight: 400
+  #       - asset: assets/fonts/JetBrainsMono/JetBrainsMono-Bold.ttf
+  #         weight: 700
