--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,20 +14,43 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.CONTENT_REPO_TOKEN }}
-          submodules: recursive # pull your Portfolio-Contents repo
-          fetch-depth: 0 # full history (safer for tools that read git info)
+          submodules: recursive
+          fetch-depth: 0
           persist-credentials: false
 
       - uses: subosito/flutter-action@v2
         with:
           channel: stable
           cache: true
+          # Add cache key for dependencies to improve cache hits
+          cache-key: "flutter-{{ matrix.flutter-version }}-packages-${{ hashFiles('**/pubspec.lock') }}"
 
       - name: Flutter pub get
         run: flutter pub get
+        # Add error handling for dependency resolution
+        continue-on-error: false
+
+      - name: Generate .env for analysis (if needed)
+        run: |
+          # Create a dummy .env file to prevent missing variable errors during analysis
+          echo "AUTH_CANARY_SALT=dummy" > .env
+          echo "AUTH_CANARY_NONCE=dummy" >> .env
+          echo "AUTH_CANARY_DATA=dummy" >> .env
+          echo "AUTH_CANARY_MAC=dummy" >> .env
+        # Only run if the app requires these variables at analysis time
+        if: ${{ github.event_name != 'pull_request' }}
 
       - name: Dart format check
         run: dart format --output=none --set-exit-if-changed .
+        # Add timeout to prevent hanging
+        timeout-minutes: 5
 
       - name: Flutter analyze
-        run: flutter analyze
+        run: flutter analyze --no-pub --fatal-infos --fatal-warnings
+        timeout-minutes: 10
+        env:
+          # Pass dummy env vars to avoid analysis errors
+          AUTH_CANARY_SALT: "dummy"
+          AUTH_CANARY_NONCE: "dummy"
+          AUTH_CANARY_DATA: "dummy"
+          AUTH_CANARY_MAC: "dummy"
